# tails-tableau-wrangler

./: .gitignore  README.md  pyproject.toml
tableau_wrangler/: __init__.py  cli.py  client.py  local_workbook.py  local_workbook_extractor.py  tableau_workbook_service.py
tap_tableau_wrangler/: streams.py  tap.py
tap_tableau_wrangler/schemas/: workbook.json  workbook_deletion.json
tests/: __init__.py  conftest.py  test_tableau_wrangler.py
